--- a/nl/mail/chrome/messenger/gloda.properties
+++ b/nl/mail/chrome/messenger/gloda.properties
@@ -35,8 +35,10 @@
 #
 # ***** END LICENSE BLOCK *****
 
-# LOCALIZATION NOTE (*.facetLabel): These are the labels used to label the facet
-#  displays in the global search facet display mechanism.
+# LOCALIZATION NOTE (*.facetNameLabel): These are the labels used to label the facet
+#  displays in the global search facet display mechanism.  They should be
+#  compact descriptions of the facet type (e.g. "Folder", and don't need to
+#  refer to the objects being faceted (e.g. "Message" or "Mail").
 
 # LOCALIZATION NOTE (*.includeLabel): The label to use for the included group
 #  in the facet display.  If not provided, we will fall back to
@@ -53,24 +55,24 @@
 
 # LOCALIZATION NOTE (gloda.message.attr.account.*): Stores the account in which
 #  a message's folder is located.
-gloda.message.attr.account.facetLabel=Account
+gloda.message.attr.account.facetNameLabel=Account
 
 # LOCALIZATION NOTE (gloda.message.attr.folder.*): Stores the message folder in
 #  which the message is stored.
-gloda.message.attr.folder.facetLabel=E-mailmap
+gloda.message.attr.folder.facetNameLabel=Map
 
 # LOCALIZATION NOTE (gloda.message.attr.fromMe.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
-gloda.message.attr.fromMe.facetLabel=Van mij
+gloda.message.attr.fromMe.facetNameLabel=Van mij
 
 # LOCALIZATION NOTE (gloda.message.attr.toMe.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
-gloda.message.attr.toMe.facetLabel=Aan mij
+gloda.message.attr.toMe.facetNameLabel=Aan mij
 
 
 # LOCALIZATION NOTE (gloda.message.attr.involves.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
-gloda.message.attr.involves.facetLabel=Mensen
+gloda.message.attr.involves.facetNameLabel=Mensen
 gloda.message.attr.involves.includeLabel=betreft één van:
 gloda.message.attr.involves.excludeLabel=betreft niet:
 gloda.message.attr.involves.remainderLabel=andere participanten:
@@ -80,7 +82,7 @@ gloda.message.attr.involves.remainderLabel=andere participanten:
 #  according to the "Date" header.  This is not the same as when the message
 #  was sent or when it was eventually received by the user.  In the future we
 #  may change this to be one of the other dates, but not anytime soon.
-gloda.message.attr.date.facetLabel=Datum
+gloda.message.attr.date.facetNameLabel=Datum
 
 # LOCALIZATION NOTE (gloda.message.attr.attachmentTypes.*): Stores the list of
 #  MIME types (ex: image/png, text/plain) of real attachments (not just part of
@@ -88,40 +90,40 @@ gloda.message.attr.date.facetLabel=Datum
 #  Although we hope to be able to provide localized human-readable explanations
 #  of the MIME type (ex: "PowerPoint document"), I don't know if that is going
 #  to happen.
-gloda.message.attr.attachmentTypes.facetLabel=Bijlagen
+gloda.message.attr.attachmentTypes.facetNameLabel=Bijlagen
 
 # LOCALIZATION NOTE (gloda.message.attr.mailing-list.*): Stores the mailing
 #  lists detected in the message.  This will normally be the e-mail address of
 #  the mailing list and only be detected in messages received from the mailing
 #  list.  Extensions may contribute additional detected mailing-list-like
 #  things.
-gloda.message.attr.mailing-list.facetLabel=Betreft e-maillijst
+gloda.message.attr.mailing-list.facetNameLabel=E-maillijst
 
 # LOCALIZATION NOTE (gloda.message.attr.tag.*): Stores the tags applied to the
 #  message.  Notably, gmail's labels are not currently exposed via IMAP and we
 #  do not do anything clever with gmail, so this is indepdendent of gmail
 #  labels.  This may change in the future, but it's a safe bet it's not
 #  happening on Thunderbird's side prior to 3.0.
-gloda.message.attr.tag.facetLabel=Labels
+gloda.message.attr.tag.facetNameLabel=Labels
 
 # LOCALIZATION NOTE (gloda.message.attr.star.*): Stores whether the message is
 #  starred or not, as indicated by a pretty star icon.  In the past, the icon
 #  used to be a flag.  The IMAP terminology continues to be "flagged".
-gloda.message.attr.star.facetLabel=Met ster
+gloda.message.attr.star.facetNameLabel=Met ster
 
 # LOCALIZATION NOTE (gloda.message.attr.read.*): Stores whether the user has
 #  read the message or not.
-gloda.message.attr.read.facetLabel=Gelezen
+gloda.message.attr.read.facetNameLabel=Gelezen
 
 # LOCALIZATION NOTE (gloda.message.attr.repliedTo.*): Stores whether we believe
 #  the user has ever replied to the message.  We normally show a little icon in
 #  the thread pane when this is the case.
-gloda.message.attr.repliedTo.facetLabel=Beantwoord aan
+gloda.message.attr.repliedTo.facetNameLabel=Beantwoord aan
 
 # LOCALIZATION NOTE (gloda.message.attr.forwarded.*): Stores whether we believe
 #  the user has ever forwarded the message.  We normally show a little icon in
 #  the thread pane when this is the case.
-gloda.message.attr.forwarded.facetLabel=Doorgestuurd
+gloda.message.attr.forwarded.facetNameLabel=Doorgestuurd
 
 # LOCALIZATION NOTE (gloda.mimetype.category.*.label): Map categories of MIME
 #  types defined in mimeTypeCategories.js to labels.
