--- a/nl/mail/chrome/messenger/glodaFacetView.properties
+++ b/nl/mail/chrome/messenger/glodaFacetView.properties
@@ -97,6 +97,27 @@ glodaFacetView.facets.excluded.fallbackLabel=uitgesloten:
 #  "gloda.message.attr.ATTRIBUTE.remainderLabel".)
 glodaFacetView.facets.remainder.fallbackLabel=ander:
 
+# LOCALIZATION NOTE (glodaFacetView.facets.mustMatchLabel.fallbackLabel): The label
+#  to use to restrict a facet by a particular value if there is no explicit
+#  attribute "mustMatchLabel" defined.  (The explicit label would be named
+#  "gloda.message.attr.ATTRIBUTE.mustMatchLabel".)
+glodaFacetView.facets.mustMatchLabel.fallbackLabel=moet overeenkomen met #1
+glodaFacetView.facets.mustMatchNoneLabel.fallbackLabel=kan niet een waarde bevatten
+
+# LOCALIZATION NOTE (glodaFacetView.facets.cantMatchLabel.fallbackLabel): The label
+#  to use to restrict a facet by the absence of a particular value if there is
+#  no explicit attribute "cantMatchLabel" defined.  (The explicit label would be
+#  named "gloda.message.attr.ATTRIBUTE.cantMatchLabel".)
+glodaFacetView.facets.cantMatchLabel.fallbackLabel=mag niet overeenkomen met #1
+glodaFacetView.facets.mustMatchSomeLabel.fallbackLabel=moet een waarde bevatten
+
+# LOCALIZATION NOTE (glodaFacetView.facets.mayMatchLabel.fallbackLabel): The label
+#  to use to undo the restriction of a facet by a particular value if there is
+#  no explicit attribute "mayMatchLabel" defined.  (The explicit label would be
+#  named "gloda.message.attr.ATTRIBUTE.mayMatchLabel".)
+glodaFacetView.facets.mayMatchLabel.fallbackLabel=voorwaarde verwijderen
+glodaFacetView.facets.mayMatchAnyLabel.fallbackLabel=voorwaarde verwijderen
+
 # LOCALIZATION NOTE (glodaFacetView.facets.noneLabel): The text to display when
 #  a facet needs to indicate that an attribute omitted a value or was otherwise
 #  empty.
