--- a/be/mail/chrome/messenger/glodaComplete.properties
+++ b/be/mail/chrome/messenger/glodaComplete.properties
@@ -11,20 +11,21 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org Code.
+# The Original Code is Thunderbird Global Database
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
+# Mozilla Messaging, Inc.
+# Portions created by the Initial Developer are Copyright (C) 2009
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
+#   David Ascher <dascher@mozillamessaging.com>
 #   
 #   
 #
 # Alternatively, the contents of this file may be used under the terms of
-# either the GNU General Public License Version 2 or later (the "GPL"), or
-# the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+# either of the GNU General Public License Version 2 or later (the "GPL"),
+# or the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
 # in which case the provisions of the GPL or the LGPL are applicable instead
 # of those above. If you wish to allow use of your version of this file only
 # under the terms of either the GPL or the LGPL, and not to allow others to
@@ -35,10 +36,6 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
-2000 = Тэкставы файл (LDIF, .tab, .csv, .txt)
-2001 = Імпарт адраснай кнігі з тэкставага файла, у тым ліку: LDIF (.ldif, .ldi), tab-падзеленых (.tab, .txt) ці коска-падзеленых (.csv) фарматаў.
-2002 = Тэкставая адрасная кніга
-2003 = Імпартаваная адрасная кніга %S
-2004 = Перададзены дрэнны параметр пры імпарту адраснай кнігі
-2005 = Памылка доступу да файла адраснай кнігі %S.
-2006 = Памылка імпартавання адраснай кнігі %S, магчыма не ўсе адрасы былі імпартаваны.
+glodaComplete.messagesTagged.label = Лісты з тэгам: #1
+glodaComplete.messagesMentioning.label = Лісты, што згадваюць: #1
+glodaComplete.messagesMentioningMany.label = Лісты, што згадваюць: #1
