--- a/tr/calendar/chrome/calendar/calendar-event-dialog-attendees.properties
+++ b/tr/calendar/chrome/calendar/calendar-event-dialog-attendees.properties
@@ -11,15 +11,14 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is Calendar migration code.
+# The Original Code is Mozilla Calendar code.
 #
 # The Initial Developer of the Original Code is
-#   Joey Minta <jminta@gmail.com>
-# Portions created by the Initial Developer are Copyright (C) 2006
+#   Marc Zahnlecker <m.zahnlecker@googlemail.com>
+# Portions created by the Initial Developer are Copyright (C) 2009
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
-#   Matthew Willis <lilmatt@mozilla.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -35,12 +34,8 @@
 #
 # ***** END LICENSE BLOCK *****
 
-migratingApp = %1$S taşınıyor...
-
-# The next two lines are duplicated from migration.dtd until there is branding
-# for lightning
-migrationTitle = %1$S: içe aktarım
-migrationDescription=%1$S tarafından birçok takvim verileriniz içe aktarılabilir. Şuanda bilgisayarınızda aşağıdaki uygulamalar mevcut. Lütfen içe aktarmak istediğiniz verileri seçiniz
-finished = Tamamlandı
-disableExtTitle = Uyumsuz eklenti bulundu
-disableExtText = Eski bir Mozilla Takvim eklentisi kurdunuz ve bu eklenti yeni sürüm ile uyumsuz.  Eklenti etkisiz hale getirilecek ve  %1$S tekrar başlatılacak.
+event.attendee.role.required = Gerekli katılımcı
+event.attendee.role.optional = İsteğe bağlı katılımcı
+event.attendee.role.nonparticipant = Non Participant
+event.attendee.role.chair = Başkan
+event.attendee.role.unknown = Unknown Attendee (%1$S)
